--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web3tools",
-  "version": "0.1.0",
+  "name": "web3-online-tools",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
