--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "vue": "^2.5.17",
     "web3": "^1.0.0-beta.36"
   },
