--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@vue/cli-service": "^3.0.5",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "eslint-plugin-vue": "^6.0.0",
     "vue-template-compiler": "^2.5.20"
   },
   "eslintConfig": {
